# RTFD

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release-and-publish.yml  test.yml
doc-mcp-claude/: .gitignore  DOCUMENTATION_INDEX.md  DOC_MCP_RESEARCH.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  USING_DOC_MCP_FOR_DEVELOPMENT.md  example_usage.py  requirements.txt  run.sh  server.py  test_server.py
docs/: README.md
scripts/: update_changelog.py
src/RTFD/: __init__.py  cache.py  content_utils.py  server.py  utils.py
src/RTFD/providers/: __init__.py  base.py  crates.py  dockerhub.py  gcp.py  github.py  godocs.py  google.py  npm.py  pypi.py  zig.py
src/doc_mcp/: server.py  utils.py
src/doc_mcp/providers/: godocs.py
tests/: conftest.py  test_cache.py  test_content_utils.py  test_discovery.py  test_server.py
tests/cassettes/: test_gcp_search_library_no_match.yaml
tests/test_integration/: test_gcp_integration.py  test_npm_integration.py
tests/test_providers/: test_crates.py  test_dockerhub_dockerfile.py  test_gcp.py  test_github.py  test_godocs.py  test_npm.py  test_pypi.py  test_zig.py
